--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <body>
-      <div class="wrapper">
-        <div class="title">
+    <link href="page.css" rel="stylesheet" type="text/css">
+      </head>
+        <body>
+          <div class="wrapper">
+            <div class="title">
           Television
         </div>
       </div>
     </body>
-  </head>
 </html>
