--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
             <div class="title">
           Television
         </div>
+      <div class="image">
+        <img src="https://marketingondemand.files.wordpress.com/2010/01/television.jpg">
+            </div>
       </div>
     </body>
 </html>
