--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <div class="image">
         <img src="https://marketingondemand.files.wordpress.com/2010/01/television.jpg">
             </div>
+            <div class="text">
+<p>The television was invented in the 1920's. In the 50's television was the primary source for influencing public opinion.</p>
+           </div>
       </div>
     </body>
 </html>
