--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           Television
               </h1>
         </div>
-        <img src="http://i.ebayimg.com/00/$(KGrHqJHJFEFI6Ye0YGuBSQFuhCw(Q~~_32.JPG">
+            <div><img src="http://i.ebayimg.com/00/$(KGrHqJHJFEFI6Ye0YGuBSQFuhCw(Q~~_32.JPG"></div>
             <div class="text">
 <p>The television was invented in the 1920's. In the 50's television was the primary source for influencing public opinion.</p>
            </div>
